[#2775] Added authentication, permissions, filters to suspended Submission API
